# libs/domains/decabill/backend/feature-billing-manager/src/lib/dto/update-service-plan.dto.ts
@@ -29,7 +29,7 @@ export class UpdateServicePlanDto {
   description?: string;
 
   @IsOptional()
-  @IsEnum(BillingIntervalType, { message: 'Billing interval type must be hour, day, or month' })
+  @IsEnum(BillingIntervalType, { message: 'Billing interval type must be hour, day, month, or year' })
   billingIntervalType?: BillingIntervalType;
 
   @IsOptional()
@@ -46,6 +46,10 @@ export class UpdateServicePlanDto {
   @IsOptional()
   @IsBoolean({ message: 'cancelAtPeriodEnd must be a boolean' })
   cancelAtPeriodEnd?: boolean;
+
+  @IsOptional()
+  @IsBoolean({ message: 'billInAdvance must be a boolean' })
+  billInAdvance?: boolean;
 
   @IsOptional()
   @IsInt({ message: 'minCommitmentDays must be an integer' })
